--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-target/
+/target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -12,6 +12,7 @@ buildNumber.properties
 
 # Eclipse m2e generated files
 # Eclipse Core
-.project
+/.project
 # JDT-specific (Eclipse Java Development Tools)
-.classpath
+/.classpath
+/.settings
