Add MacOS entitlements to allow camera access for the app bundle

--- a/pom.xml
+++ b/pom.xml
@@ -662,8 +662,15 @@
                       <argument>--mac-package-identifier</argument>
                       <argument>com.koibots.qrscouthub</argument>
 
+                      <argument>--mac-entitlements</argument>
+                      <argument>${project.basedir}/src/jpackage/entitlements.plist</argument>
+
+                      <argument>--mac-sign</argument>
+
                       <argument>--resource-dir</argument>
                       <argument>${project.basedir}/src/jpackage</argument>
+
+
 
                       <!-- Specify the icon set to use for the dock, etc. -->
                       <argument>--icon</argument>
