--- a/pom.xml
+++ b/pom.xml
@@ -373,6 +373,12 @@
             <groupId>com.github.spotbugs</groupId>
             <artifactId>spotbugs-maven-plugin</artifactId>
             <version>4.9.8.2</version>
+            <configuration>
+              <excludeFilterFile>${project.basedir}/conf/spotbugs-exclude.xml</excludeFilterFile>
+<!--
+              <includeFilterFile>conf/spotbugs-include.xml</includeFilterFile>
+-->
+            </configuration>
             <reportSets>
               <reportSet>
                 <reports>
