--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
       <opencsv.version>5.12.0</opencsv.version>
       <gson.version>2.13.2</gson.version>
       <zxing.version>3.5.3</zxing.version>
+      <spotbugs.version>4.9.8.2</spotbugs.version>
 
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.build.testSourceEncoding>UTF-8</project.build.testSourceEncoding>
@@ -207,6 +208,14 @@
             <version>3.9.0</version>
         </plugin>
 
+        <plugin>
+          <groupId>com.github.spotbugs</groupId>
+          <artifactId>spotbugs-maven-plugin</artifactId>
+          <version>${spotbugs.version}</version>
+          <configuration>
+            <excludeFilterFile>${project.basedir}/conf/spotbugs-exclude.xml</excludeFilterFile>
+          </configuration>
+        </plugin>
 <!--
             <plugin>
                 <groupId></groupId>
@@ -372,12 +381,10 @@
           <plugin>
             <groupId>com.github.spotbugs</groupId>
             <artifactId>spotbugs-maven-plugin</artifactId>
-            <version>4.9.8.2</version>
+            <version>${spotbugs.version}</version>
             <configuration>
               <excludeFilterFile>${project.basedir}/conf/spotbugs-exclude.xml</excludeFilterFile>
-<!--
-              <includeFilterFile>conf/spotbugs-include.xml</includeFilterFile>
--->
+              <includeTests>true</includeTests>
             </configuration>
             <reportSets>
               <reportSet>
