Fix license URL

--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
     <licenses>
       <license>
         <name>The MIT License</name>
-        <url>opensource.org</url>
+        <url>https://raw.githubusercontent.com/koibots8230/qr-scout-hub-java/refs/heads/main/LICENSE</url>
         <distribution>repo</distribution>
       </license>
     </licenses>
