--- a/pom.xml
+++ b/pom.xml
@@ -570,6 +570,9 @@
                       <!-- Linux -->
                       <delete file="${project.build.directory}/${project.name}.deb"/>
                       <delete file="${project.build.directory}/${project.name}.rpm"/>
+
+                      <!-- Windows + Linux -->
+                      <delete dir="${project.build.directory}/${project.name}"/>
                     </target>
                   </configuration>
                   <goals>
@@ -752,6 +755,185 @@
       </profile>
 
       <profile>
+        <id>jpackage-linux-app</id>
+        <!-- Builds an "application" including a JRE and all application assets. -->
+        <!-- mvn package -Pjpackage-linux-app -->
+        <build>
+          <plugins>
+            <!-- 0. Delete any application bundle if it already exists. -->
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-antrun-plugin</artifactId>
+              <version>3.1.0</version>
+              <executions>
+                <execution>
+                  <id>delete-old-app</id>
+                  <phase>package</phase>
+                  <configuration>
+                    <target>
+                      <delete dir="${project.build.directory}/app" />
+
+                      <!-- MacOS -->
+                      <delete dir="${project.build.directory}/${project.name}.app"/>
+                      <delete file="${project.build.directory}/${project.name}.dmg"/>
+
+                      <!-- Windows -->
+                      <delete file="${project.build.directory}/${project.name}.exe"/>
+                      <delete file="${project.build.directory}/${project.name}.msi"/>
+
+                      <!-- Linux -->
+                      <delete file="${project.build.directory}/${project.name}.deb"/>
+                      <delete file="${project.build.directory}/${project.name}.rpm"/>
+
+                      <!-- Windows + Linux -->
+                      <delete dir="${project.build.directory}/${project.name}"/>
+                    </target>
+                  </configuration>
+                  <goals>
+                    <goal>run</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+
+            <!-- 1. Copy runtime dependencies to target/app -->
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-dependency-plugin</artifactId>
+              <version>3.6.0</version>
+              <executions>
+                <execution>
+                  <id>copy-dependencies</id>
+                  <phase>package</phase>
+                  <goals>
+                    <goal>copy-dependencies</goal>
+                  </goals>
+                  <configuration>
+                    <outputDirectory>${project.build.directory}/app</outputDirectory>
+                    <includeScope>runtime</includeScope>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+
+            <!-- 2. Copy the main application JAR and splash image into target/app -->
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.1</version>
+                <executions>
+                  <execution>
+                    <id>copy-main-jar</id>
+                    <phase>package</phase>
+                    <goals><goal>copy-resources</goal></goals>
+                    <configuration>
+                    <outputDirectory>${project.build.directory}/app</outputDirectory>
+                    <resources>
+                      <resource>
+                        <directory>${project.build.directory}</directory>
+                        <includes>
+                          <include>${project.build.finalName}.jar</include>
+                        </includes>
+                      </resource>
+                    </resources>
+                  </configuration>
+                </execution>
+                <execution>
+                  <id>copy-splash</id>
+                  <phase>package</phase>
+                  <goals><goal>copy-resources</goal></goals>
+                  <configuration>
+                    <outputDirectory>${project.build.directory}/app</outputDirectory>
+                    <resources>
+                      <resource>
+                        <directory>src/main/resources/images</directory>
+                        <includes>
+                          <include>splash.png</include>
+                        </includes>
+                      </resource>
+                    </resources>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+
+            <!-- 4. Delete unnecessary libraries that bloat the app bundle -->
+            <!-- 5. Generate icon set for the application, based upon the KoiBots logo -->
+            <!-- 6. Call jpackage to build the appliction bundle. -->
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>exec-maven-plugin</artifactId>
+              <version>3.2.0</version>
+              <executions>
+                <execution>
+                  <id>prune-superfluous-libraries</id>
+                  <phase>package</phase>
+                  <goals><goal>exec</goal></goals>
+                  <configuration>
+                    <executable>bash</executable>
+                    <arguments>
+                      <argument>-c</argument>
+                      <argument>
+                          ls -1 target/app/*x86* target/app/*windows* target/app/*macos* target/app/*ios* target/app/*android* &amp;&amp; \
+                          rm -f target/app/*x86* &amp;&amp; \
+                          rm -f target/app/*windows* &amp;&amp; \
+                          rm -f target/app/*macos* &amp;&amp; \
+                          rm -f target/app/*ios* &amp;&amp; \
+                          rm -f target/app/*android*
+                      </argument>
+                    </arguments>
+                  </configuration>
+                </execution>
+                <execution>
+                  <id>run-jpackage</id>
+                  <phase>package</phase>
+                  <goals><goal>exec</goal></goals>
+                  <configuration>
+                    <executable>jpackage</executable>
+                    <arguments>
+                      <argument>--name</argument>
+                      <argument>${project.name}</argument>
+
+                      <argument>--input</argument>
+                      <argument>${project.build.directory}/app</argument>
+
+                      <argument>--main-jar</argument>
+                      <argument>${project.build.finalName}.jar</argument>
+
+                      <argument>--main-class</argument>
+                      <argument>${main.class}</argument>
+
+                      <!-- The app type: app-image = .app, dmg = .dmg disk image -->
+                      <argument>--type</argument>
+                      <argument>app-image</argument>
+
+                      <argument>--dest</argument>
+                      <argument>${project.build.directory}</argument>
+
+                      <argument>--resource-dir</argument>
+                      <argument>${project.basedir}/src/jpackage</argument>
+
+                      <!-- Specify the icon set to use for the dock, etc. -->
+<!--
+                      <argument>- -icon</argument>
+                      <argument>${project.build.directory}/icons/${project.build.finalName}.icns</argument>
+-->
+
+                      <!-- Show a splash screen image during launch -->
+                      <argument>--java-options</argument>
+                      <argument>-splash:${APPDIR}/splash.png</argument>
+
+                      <argument>--verbose</argument>
+                    </arguments>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </build>
+      </profile>
+
+      <profile>
         <id>jpackage-win</id>
         <!-- Builds an "application" directory including a JRE and all application assets. -->
         <!-- mvn package -Pjpackage-win -->
@@ -777,11 +959,13 @@
                       <!-- Windows -->
                       <delete file="${project.build.directory}/${project.name}.exe"/>
                       <delete file="${project.build.directory}/${project.name}.msi"/>
-                      <delete dir="${project.build.directory}/${project.name}"/>
 
                       <!-- Linux -->
                       <delete file="${project.build.directory}/${project.name}.deb"/>
                       <delete file="${project.build.directory}/${project.name}.rpm"/>
+
+                      <!-- Windows + Linux -->
+                      <delete dir="${project.build.directory}/${project.name}"/>
                     </target>
                   </configuration>
                   <goals>
