Move "Edit Database" into a proper Action
This allows us to disable the action when no project has been loaded

--- a/src/main/resources/bundles/scoutinghub.properties
+++ b/src/main/resources/bundles/scoutinghub.properties
@@ -71,6 +71,8 @@ action.editGame.name=Edit Game
 action.editGame.shortDescription=Edit the game configuration.
 action.editGame.mnemonic=c
 
+action.editDatabase.name=Edit Database
+
 recordText.noCurrentRecord=(No current record)
 
 error.camera.failedToOpen.title=Camera Failure
