Use an ActionBase for the quit action
This gets us internationalization that matches the other actions

--- a/src/main/resources/bundles/scoutinghub.properties
+++ b/src/main/resources/bundles/scoutinghub.properties
@@ -1,9 +1,7 @@
 title.new-project=New Project
 
 menu.file.name=File
-menu.file.quit.name=Quit
 menu.tools.name=Tools
-menu.tools.editDatabase.name=Edit Database
 menu.options.name=Options
 menu.options.importImmediately.name=Import Immediately
 menu.help.name=Help
@@ -72,6 +70,10 @@ action.editGame.shortDescription=Edit the game configuration.
 action.editGame.mnemonic=c
 
 action.editDatabase.name=Edit Database
+
+action.quit.name=Quit
+action.quit.mnemonic=q
+action.quit.accelerator=meta Q
 
 recordText.noCurrentRecord=(No current record)
 
