--- a/src/main/resources/bundles/scoutinghub.properties
+++ b/src/main/resources/bundles/scoutinghub.properties
@@ -3,7 +3,6 @@ title.new-project=New Project
 menu.file.name=File
 menu.tools.name=Tools
 menu.options.name=Options
-menu.options.importImmediately.name=Import Immediately
 menu.help.name=Help
 menu.help.help.name=Help
 
@@ -68,6 +67,8 @@ action.scanNow.accelerator=shift meta S
 action.editGame.name=Edit Game
 action.editGame.shortDescription=Edit the game configuration.
 action.editGame.mnemonic=c
+
+action.importImmediately.name=Import Immediately
 
 action.editDatabase.name=Edit Database
 
