Make "help" into an action action

--- a/src/main/resources/bundles/scoutinghub.properties
+++ b/src/main/resources/bundles/scoutinghub.properties
@@ -1,10 +1,11 @@
 title.new-project=New Project
 
+window.help.title=Help
+
 menu.file.name=File
 menu.tools.name=Tools
 menu.options.name=Options
 menu.help.name=Help
-menu.help.help.name=Help
 
 action.new.name=New...
 action.new.shortDescription=Creates a new project.
@@ -71,6 +72,9 @@ action.editGame.mnemonic=c
 action.importImmediately.name=Import Immediately
 
 action.editDatabase.name=Edit Database
+
+action.help.name=Help
+action.help.mnemonic=h
 
 action.quit.name=Quit
 action.quit.mnemonic=q
