--- a/src/main/resources/bundles/scoutinghub.properties
+++ b/src/main/resources/bundles/scoutinghub.properties
@@ -3,6 +3,8 @@ title.new-project=New Project
 window.help.title=Help
 
 menu.file.name=File
+menu.project.name=Project
+menu.database.name=Database
 menu.tools.name=Tools
 menu.options.name=Options
 menu.help.name=Help
@@ -25,7 +27,7 @@ action.close.mnemonic=c
 #action.close.accelerator=
 action.close.largeIcon=/images/close.png
 
-action.export.name=Export
+action.export.name=Export Database
 action.export.shortDescription=Exports the database to CSV.
 action.export.largeIcon=/images/export.png
 action.export.mnemonic=x
@@ -36,7 +38,7 @@ action.import.largeIcon=/images/insert.png
 action.import.mnemonic=i
 action.import.accelerator=meta I
 
-action.makeWebApp.name=Generate Web Application
+action.makeWebApp.name=Export Web Application...
 action.makeWebApp.shortDescription=Exports the QR Scout App web application.
 action.makeWebApp.mnemonic=w
 
@@ -51,27 +53,29 @@ action.launchWeb.shortDescription=Launches the QR Scout Web Application locally 
 action.launchWeb.mnemonic=w'
 action.launchWeb.accelerator=shift meta W
 
-action.analytics.name=Analytics
+action.analytics.name=Analytics...
 action.analytics.shortDescription=Run analyses against your scouting database.
 action.analytics.mnemonic=y
 action.analytics.accelerator=meta Y
 
-action.chooseCamera.name=Choose Camera
+action.chooseCamera.name=Choose Camera...
 action.chooseCamera.shortDescription=Allow you to choose the camera device to use.
 action.chooseCamera.mnemonic=c
 
-action.scanNow.name=Scan Code
+action.scanNow.name=Test Scanner...
 action.scanNow.shortDescription=Scan a QR code and display the data.
 action.scanNow.mnemonic=s
 action.scanNow.accelerator=shift meta S
 
-action.editGame.name=Edit Game
+action.editGame.name=Edit Game...
 action.editGame.shortDescription=Edit the game configuration.
 action.editGame.mnemonic=c
 
 action.importImmediately.name=Import Immediately
+action.importImmediately.shortDescription=When scanning codes, immediately import the data without preview or confirmation. 
 
-action.editDatabase.name=Edit Database
+action.editDatabase.name=Edit Database...
+action.editDatabase.shortDescription=View and modify previously-stored data in the database.
 
 action.help.name=Help
 action.help.mnemonic=h
