Improve action description

--- a/src/main/resources/bundles/scoutinghub.properties
+++ b/src/main/resources/bundles/scoutinghub.properties
@@ -38,7 +38,7 @@ action.import.mnemonic=i
 action.import.accelerator=meta I
 
 action.makeWebApp.name=Export Web Application...
-action.makeWebApp.shortDescription=Exports the QR Scout App web application.
+action.makeWebApp.shortDescription=Exports the QR Scout web application to a ZIP file.
 action.makeWebApp.mnemonic=w
 
 action.scan.name=Scan
