--- a/src/main/resources/bundles/scoutinghub.properties
+++ b/src/main/resources/bundles/scoutinghub.properties
@@ -1,5 +1,6 @@
 title.new-project=New Project
 window.help.title=Help
+window.thirdPartyLicenses.title=Third-Party Licenses
 
 menu.file.name=File
 menu.project.name=Project
@@ -7,6 +8,7 @@ menu.database.name=Database
 menu.tools.name=Tools
 menu.options.name=Options
 menu.help.name=Help
+menu.help.thirdPartyLicenses.name=Third-Party Licenses
 
 action.new.name=New...
 action.new.shortDescription=Creates a new project.
