Add ability to import an external game config file
Note that this can only be done with a project without any existing fields.

This fixes #12

--- a/src/main/resources/bundles/scoutinghub.properties
+++ b/src/main/resources/bundles/scoutinghub.properties
@@ -68,9 +68,13 @@ action.scanNow.shortDescription=Scan a QR code and display the data.
 action.scanNow.mnemonic=s
 action.scanNow.accelerator=shift meta S
 
+action.importGameConfig.name=Import Config...
+action.importGameConfig.shortDescription=Imports all sections and fields from a game configuration file.
+action.importGameConfig.mnemonic=i
+
 action.editGame.name=Edit Game...
 action.editGame.shortDescription=Edit the game configuration.
-action.editGame.mnemonic=c
+action.editGame.mnemonic=e
 
 action.importImmediately.name=Import Immediately
 action.importImmediately.shortDescription=When scanning codes, immediately import the data without preview or confirmation.
