--- a/pom.xml
+++ b/pom.xml
@@ -179,7 +179,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
-            <version>3.3.0</version> <!-- latest stable version -->
+            <version>3.5.0</version> <!-- latest stable version -->
             <configuration>
               <archive>
                 <manifest>
@@ -535,6 +535,40 @@
       Docs: https://maven.apache.org/pom.html#profiles
     -->
     <profiles>
+      <profile>
+        <id>release</id>
+        <activation>
+          <file>
+            <exists>build-release.properties</exists>
+          </file>
+        </activation>
+        <properties>
+          <project.build.outputTimestamp>${release.timestamp}</project.build.outputTimestamp>
+        </properties>
+        <build>
+          <plugins>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>properties-maven-plugin</artifactId>
+              <version>1.1.0</version>
+              <executions>
+                <execution>
+                  <phase>initialize</phase>
+                  <goals>
+                    <goal>read-project-properties</goal>
+                  </goals>
+                  <configuration>
+                    <files>
+                      <file>build-release.properties</file>
+                    </files>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </build>
+      </profile>
+
       <profile>
         <id>jpackage-mac</id>
         <!-- Builds an "application" including a JRE and all application assets. -->
