Actually use the platform-specific key bindings

--- a/src/main/resources/bundles/scoutinghub.properties
+++ b/src/main/resources/bundles/scoutinghub.properties
@@ -13,13 +13,13 @@ menu.help.thirdPartyLicenses.name=Third-Party Licenses
 action.new.name=New...
 action.new.shortDescription=Creates a new project.
 action.new.mnemonic=n
-action.new.accelerator=meta N
+action.new.accelerator=platform N
 action.new.largeIcon=/images/new.png
 
 action.open.name=Open...
 action.open.shortDescription=Opens a project.
 action.open.mnemonic=o
-action.open.accelerator=meta O
+action.open.accelerator=platform O
 action.open.largeIcon=/images/open.png
 
 action.close.name=Close
@@ -37,7 +37,7 @@ action.import.name=Import
 action.import.shortDescription=Import the scanned data into the database.
 action.import.largeIcon=/images/insert.png
 action.import.mnemonic=i
-action.import.accelerator=meta I
+action.import.accelerator=platform I
 
 action.makeWebApp.name=Export Web Application...
 action.makeWebApp.shortDescription=Exports the QR Scout web application to a ZIP file.
@@ -47,17 +47,17 @@ action.scan.name=Scan
 action.scan.shortDescription=Opens the camera to scan a QR code.
 action.scan.largeIcon=/images/koibots-qr.png
 action.scan.mnemonic=s
-action.scan.accelerator=meta S
+action.scan.accelerator=platform S
 
 action.launchWeb.name=Launch Web Application
 action.launchWeb.shortDescription=Launches the QR Scout Web Application locally for testing.
 action.launchWeb.mnemonic=w'
-action.launchWeb.accelerator=shift meta W
+action.launchWeb.accelerator=shift platform W
 
 action.analytics.name=Analytics...
 action.analytics.shortDescription=Run analyses against your scouting database.
 action.analytics.mnemonic=y
-action.analytics.accelerator=meta Y
+action.analytics.accelerator=platform Y
 
 action.chooseCamera.name=Choose Camera...
 action.chooseCamera.shortDescription=Allow you to choose the camera device to use.
@@ -66,7 +66,7 @@ action.chooseCamera.mnemonic=c
 action.scanNow.name=Test Scanner...
 action.scanNow.shortDescription=Scan a QR code and display the data.
 action.scanNow.mnemonic=s
-action.scanNow.accelerator=shift meta S
+action.scanNow.accelerator=shift platform S
 
 action.importGameConfig.name=Import Config...
 action.importGameConfig.shortDescription=Imports all sections and fields from a game configuration file.
@@ -87,7 +87,7 @@ action.help.mnemonic=h
 
 action.quit.name=Quit
 action.quit.mnemonic=q
-action.quit.accelerator=meta Q
+action.quit.accelerator=platform Q
 
 recordText.noCurrentRecord=(No current record)
 
