--- a/src/main/resources/bundles/scoutinghub.properties
+++ b/src/main/resources/bundles/scoutinghub.properties
@@ -79,6 +79,9 @@ action.editGame.mnemonic=e
 action.importImmediately.name=Import Immediately
 action.importImmediately.shortDescription=When scanning codes, immediately import the data without preview or confirmation.
 
+action.rescanImmediately.name=Resume Scan Immediately
+action.rescanImmediately.shortDescription=After inserting data, immediately start the camera scanner again.
+
 action.editDatabase.name=Edit Database...
 action.editDatabase.shortDescription=View and modify previously-stored data in the database.
 
