Change "export database" top write to a file

--- a/src/main/resources/bundles/scoutinghub.properties
+++ b/src/main/resources/bundles/scoutinghub.properties
@@ -28,7 +28,7 @@ action.close.mnemonic=c
 #action.close.accelerator=
 action.close.largeIcon=/images/close.png
 
-action.export.name=Export Database
+action.export.name=Export Database...
 action.export.shortDescription=Exports the database to CSV.
 action.export.largeIcon=/images/export.png
 action.export.mnemonic=x
